feat : Added One of the reason for Boom in Banking Sector

--- a/Project_file.ipynb
+++ b/Project_file.ipynb
@@ -24562,22 +24562,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2013-07-05 00:00:00')"
+       "Timestamp('2013-09-19 00:00:00')"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data3.loc[1400,'Date']"
+    "data3.loc[1450,'Date']"
    ]
   },
   {
@@ -24591,15 +24591,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "IMF Support relief Programme"
+    "### IMF Support relief Programme"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![IMF Relief Programme](IMF_PRESS_CUT.png)"
+   ]
   },
   {
    "cell_type": "code",
