fix : Removed temp file that was no longer required

--- a/Project_file.ipynb
+++ b/Project_file.ipynb
@@ -1315,206 +1315,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>LOW</th>\n",
+       "      <th>HIGH</th>\n",
+       "      <th>OPEN</th>\n",
+       "      <th>CLOSE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TRADE_ENTRY_DATE</th>\n",
+       "      <th>Date_Time</th>\n",
+       "      <th>Date_Time</th>\n",
+       "      <th>ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2009-04-01</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">9</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">30</th>\n",
+       "      <th>ATRL</th>\n",
+       "      <td>82.00</td>\n",
+       "      <td>83.50</td>\n",
+       "      <td>82.00</td>\n",
+       "      <td>82.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BAHL</th>\n",
+       "      <td>26.14</td>\n",
+       "      <td>27.30</td>\n",
+       "      <td>26.92</td>\n",
+       "      <td>26.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EPCL</th>\n",
+       "      <td>22.40</td>\n",
+       "      <td>23.25</td>\n",
+       "      <td>22.40</td>\n",
+       "      <td>22.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FCCL</th>\n",
+       "      <td>6.41</td>\n",
+       "      <td>6.74</td>\n",
+       "      <td>6.49</td>\n",
+       "      <td>6.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LUCK</th>\n",
+       "      <td>50.11</td>\n",
+       "      <td>51.85</td>\n",
+       "      <td>50.79</td>\n",
+       "      <td>51.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2019-04-15</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">16</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">7</th>\n",
+       "      <th>OGDC</th>\n",
+       "      <td>145.80</td>\n",
+       "      <td>145.80</td>\n",
+       "      <td>145.80</td>\n",
+       "      <td>145.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PPL</th>\n",
+       "      <td>176.50</td>\n",
+       "      <td>176.50</td>\n",
+       "      <td>176.50</td>\n",
+       "      <td>176.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PSO</th>\n",
+       "      <td>214.44</td>\n",
+       "      <td>214.44</td>\n",
+       "      <td>214.44</td>\n",
+       "      <td>214.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SEARL</th>\n",
+       "      <td>210.00</td>\n",
+       "      <td>210.00</td>\n",
+       "      <td>210.00</td>\n",
+       "      <td>210.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TRG</th>\n",
+       "      <td>21.90</td>\n",
+       "      <td>21.90</td>\n",
+       "      <td>21.90</td>\n",
+       "      <td>21.90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7529200 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               LOW    HIGH    OPEN   CLOSE\n",
+       "TRADE_ENTRY_DATE Date_Time Date_Time ID                                   \n",
+       "2009-04-01       9         30        ATRL    82.00   83.50   82.00   82.90\n",
+       "                                     BAHL    26.14   27.30   26.92   26.50\n",
+       "                                     EPCL    22.40   23.25   22.40   22.75\n",
+       "                                     FCCL     6.41    6.74    6.49    6.70\n",
+       "                                     LUCK    50.11   51.85   50.79   51.35\n",
+       "...                                            ...     ...     ...     ...\n",
+       "2019-04-15       16        7         OGDC   145.80  145.80  145.80  145.80\n",
+       "                                     PPL    176.50  176.50  176.50  176.50\n",
+       "                                     PSO    214.44  214.44  214.44  214.44\n",
+       "                                     SEARL  210.00  210.00  210.00  210.00\n",
+       "                                     TRG     21.90   21.90   21.90   21.90\n",
+       "\n",
+       "[7529200 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df2.to_csv('File.csv')\n",
     "df2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Installing Gradient Boosted Tree model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "!pip install XGBoost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import model_selection,tree\n",
-    "import xgboost as xgb\n",
-    "from sklearn import metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['date'] = df.index\n",
-    "df['hour'] = df['date'].dt.hour\n",
-    "df['dayofweek'] = df['date'].dt.dayofweek\n",
-    "df['quarter'] = df['date'].dt.quarter\n",
-    "df['month'] = df['date'].dt.month\n",
-    "df['year'] = df['date'].dt.year\n",
-    "df['dayofyear'] = df['date'].dt.dayofyear\n",
-    "df['dayofmonth'] = df['date'].dt.day\n",
-    "df['weekofyear'] = df['date'].dt.weekofyear\n",
-    "    \n",
-    "X = df[['hour','dayofweek','quarter','month','year',\n",
-    "           'dayofyear','dayofmonth','weekofyear','Open','High','Low','Volume']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "X.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X.Open=X.Open.astype('float')\n",
-    "X.High=X.High.astype('float')\n",
-    "X.Low=X.Low.astype('float')\n",
-    "X.Volume=X.Volume.astype('float')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y=data[['Close']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "y=y.astype('float')\n",
-    "X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train,X_test,y_train,y_test=model_selection.train_test_split(X,y,test_size=0.2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Training model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "reg = xgb.XGBRegressor(n_estimators=1000)\n",
-    "reg.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yhat=reg.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#sns.lineplot(data=yhat)\n",
-    "sns.lineplot(data=y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.lineplot(data=yhat)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metrics.mean_squared_error(y_test,yhat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yhat=reg.predict(X_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.lineplot(data=yhat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.lineplot(data=y_test)"
    ]
   }
  ],
