--- a/Project_file.ipynb
+++ b/Project_file.ipynb
@@ -1053,199 +1053,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Into First loop\n",
-      "Into  EPCL\n",
-      "done  EPCL\n",
-      "Into  FCCL\n",
-      "done  FCCL\n",
-      "Into  LUCK\n",
-      "done  LUCK\n",
-      "Into  MCB\n",
-      "done  MCB\n",
-      "Into  MLCF\n",
-      "done  MLCF\n",
-      "Into  NETSOL\n",
-      "done  NETSOL\n",
-      "Into  NML\n",
-      "done  NML\n",
-      "Into  OGDC\n",
-      "done  OGDC\n",
-      "Into  PPL\n",
-      "done  PPL\n",
-      "Into  PSO\n",
-      "done  PSO\n",
-      "Into  SEARL\n",
-      "done  SEARL\n",
-      "Into  TRG\n",
-      "done  TRG\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date_Time</th>\n",
-       "      <th>TRADE_ENTRY_DATE</th>\n",
-       "      <th>ID</th>\n",
-       "      <th>TRADE_QTY</th>\n",
-       "      <th>TRADE_RATE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2009-04-01 09:30:01.098700</td>\n",
-       "      <td>2009-04-01</td>\n",
-       "      <td>ATRL</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>82.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2009-04-01 09:30:01.098800</td>\n",
-       "      <td>2009-04-01</td>\n",
-       "      <td>ATRL</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>82.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2009-04-01 09:30:01.098900</td>\n",
-       "      <td>2009-04-01</td>\n",
-       "      <td>ATRL</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>82.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2009-04-01 09:30:01.099000</td>\n",
-       "      <td>2009-04-01</td>\n",
-       "      <td>ATRL</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>82.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2009-04-01 09:30:01.099100</td>\n",
-       "      <td>2009-04-01</td>\n",
-       "      <td>ATRL</td>\n",
-       "      <td>3700.0</td>\n",
-       "      <td>82.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4302036</th>\n",
-       "      <td>2019-04-15 15:28:45.005000</td>\n",
-       "      <td>2019-04-15</td>\n",
-       "      <td>TRG</td>\n",
-       "      <td>4500.0</td>\n",
-       "      <td>21.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4302037</th>\n",
-       "      <td>2019-04-15 15:28:51.000700</td>\n",
-       "      <td>2019-04-15</td>\n",
-       "      <td>TRG</td>\n",
-       "      <td>4500.0</td>\n",
-       "      <td>21.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4302038</th>\n",
-       "      <td>2019-04-15 15:28:51.002100</td>\n",
-       "      <td>2019-04-15</td>\n",
-       "      <td>TRG</td>\n",
-       "      <td>4500.0</td>\n",
-       "      <td>21.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4302039</th>\n",
-       "      <td>2019-04-15 15:29:15.005000</td>\n",
-       "      <td>2019-04-15</td>\n",
-       "      <td>TRG</td>\n",
-       "      <td>4500.0</td>\n",
-       "      <td>21.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4302040</th>\n",
-       "      <td>2019-04-15 16:07:13.000700</td>\n",
-       "      <td>2019-04-15</td>\n",
-       "      <td>TRG</td>\n",
-       "      <td>4500.0</td>\n",
-       "      <td>21.9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>60228574 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         Date_Time TRADE_ENTRY_DATE    ID  TRADE_QTY  \\\n",
-       "0       2009-04-01 09:30:01.098700       2009-04-01  ATRL      100.0   \n",
-       "1       2009-04-01 09:30:01.098800       2009-04-01  ATRL     1000.0   \n",
-       "2       2009-04-01 09:30:01.098900       2009-04-01  ATRL      100.0   \n",
-       "3       2009-04-01 09:30:01.099000       2009-04-01  ATRL      300.0   \n",
-       "4       2009-04-01 09:30:01.099100       2009-04-01  ATRL     3700.0   \n",
-       "...                            ...              ...   ...        ...   \n",
-       "4302036 2019-04-15 15:28:45.005000       2019-04-15   TRG     4500.0   \n",
-       "4302037 2019-04-15 15:28:51.000700       2019-04-15   TRG     4500.0   \n",
-       "4302038 2019-04-15 15:28:51.002100       2019-04-15   TRG     4500.0   \n",
-       "4302039 2019-04-15 15:29:15.005000       2019-04-15   TRG     4500.0   \n",
-       "4302040 2019-04-15 16:07:13.000700       2019-04-15   TRG     4500.0   \n",
-       "\n",
-       "         TRADE_RATE  \n",
-       "0              82.0  \n",
-       "1              82.0  \n",
-       "2              82.0  \n",
-       "3              82.0  \n",
-       "4              82.0  \n",
-       "...             ...  \n",
-       "4302036        21.9  \n",
-       "4302037        21.9  \n",
-       "4302038        21.9  \n",
-       "4302039        21.9  \n",
-       "4302040        21.9  \n",
-       "\n",
-       "[60228574 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df=pd.read_csv('../Cleaned_Data/ATRL.csv',parse_dates=True,index_col='Date_Time',infer_datetime_format=True)\n",
     "df.drop(['Unnamed: 0'],axis=1,inplace=True)\n",
@@ -1295,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.to_csv('File.csv')\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1339,107 +1159,248 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>TRADE_ENTRY_DATE</th>\n",
+       "      <th>Date_Time</th>\n",
+       "      <th>Date_Time.1</th>\n",
+       "      <th>ID</th>\n",
        "      <th>LOW</th>\n",
        "      <th>HIGH</th>\n",
        "      <th>OPEN</th>\n",
        "      <th>CLOSE</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TRADE_ENTRY_DATE</th>\n",
-       "      <th>Date_Time</th>\n",
-       "      <th>Date_Time</th>\n",
-       "      <th>ID</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">2009-04-01</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">9</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">30</th>\n",
-       "      <th>ATRL</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>ATRL</td>\n",
        "      <td>82.00</td>\n",
        "      <td>83.50</td>\n",
        "      <td>82.00</td>\n",
        "      <td>82.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BAHL</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>BAHL</td>\n",
        "      <td>26.14</td>\n",
        "      <td>27.30</td>\n",
        "      <td>26.92</td>\n",
        "      <td>26.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>EPCL</th>\n",
+       "      <th>2</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>EPCL</td>\n",
        "      <td>22.40</td>\n",
        "      <td>23.25</td>\n",
        "      <td>22.40</td>\n",
        "      <td>22.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>FCCL</th>\n",
+       "      <th>3</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>FCCL</td>\n",
        "      <td>6.41</td>\n",
        "      <td>6.74</td>\n",
        "      <td>6.49</td>\n",
        "      <td>6.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>LUCK</th>\n",
+       "      <th>4</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>LUCK</td>\n",
        "      <td>50.11</td>\n",
        "      <td>51.85</td>\n",
        "      <td>50.79</td>\n",
        "      <td>51.35</td>\n",
        "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  TRADE_ENTRY_DATE  Date_Time  Date_Time.1    ID    LOW   HIGH   OPEN  CLOSE\n",
+       "0       2009-04-01          9           30  ATRL  82.00  83.50  82.00  82.90\n",
+       "1       2009-04-01          9           30  BAHL  26.14  27.30  26.92  26.50\n",
+       "2       2009-04-01          9           30  EPCL  22.40  23.25  22.40  22.75\n",
+       "3       2009-04-01          9           30  FCCL   6.41   6.74   6.49   6.70\n",
+       "4       2009-04-01          9           30  LUCK  50.11  51.85  50.79  51.35"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=pd.read_csv('../DataCube/File.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TRADE_ENTRY_DATE</th>\n",
+       "      <th>DATE_Time</th>\n",
+       "      <th>DATE_TIME.1</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>OPEN</th>\n",
+       "      <th>HIGH</th>\n",
+       "      <th>LOW</th>\n",
+       "      <th>CLOSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ATRL</td>\n",
+       "      <td>82.00</td>\n",
+       "      <td>83.50</td>\n",
+       "      <td>82.00</td>\n",
+       "      <td>82.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BAHL</td>\n",
+       "      <td>26.92</td>\n",
+       "      <td>27.30</td>\n",
+       "      <td>26.14</td>\n",
+       "      <td>26.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>EPCL</td>\n",
+       "      <td>22.40</td>\n",
+       "      <td>23.25</td>\n",
+       "      <td>22.40</td>\n",
+       "      <td>22.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>FCCL</td>\n",
+       "      <td>6.49</td>\n",
+       "      <td>6.74</td>\n",
+       "      <td>6.41</td>\n",
+       "      <td>6.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LUCK</td>\n",
+       "      <td>50.79</td>\n",
+       "      <td>51.85</td>\n",
+       "      <td>50.11</td>\n",
+       "      <td>51.35</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">2019-04-15</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">16</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">7</th>\n",
-       "      <th>OGDC</th>\n",
+       "      <th>7529195</th>\n",
+       "      <td>2019-04-15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OGDC</td>\n",
        "      <td>145.80</td>\n",
        "      <td>145.80</td>\n",
        "      <td>145.80</td>\n",
        "      <td>145.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>PPL</th>\n",
+       "      <th>7529196</th>\n",
+       "      <td>2019-04-15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PPL</td>\n",
        "      <td>176.50</td>\n",
        "      <td>176.50</td>\n",
        "      <td>176.50</td>\n",
        "      <td>176.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>PSO</th>\n",
+       "      <th>7529197</th>\n",
+       "      <td>2019-04-15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PSO</td>\n",
        "      <td>214.44</td>\n",
        "      <td>214.44</td>\n",
        "      <td>214.44</td>\n",
        "      <td>214.44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>SEARL</th>\n",
+       "      <th>7529198</th>\n",
+       "      <td>2019-04-15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SEARL</td>\n",
        "      <td>210.00</td>\n",
        "      <td>210.00</td>\n",
        "      <td>210.00</td>\n",
        "      <td>210.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>TRG</th>\n",
+       "      <th>7529199</th>\n",
+       "      <td>2019-04-15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TRG</td>\n",
        "      <td>21.90</td>\n",
        "      <td>21.90</td>\n",
        "      <td>21.90</td>\n",
@@ -1447,35 +1408,47 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7529200 rows × 4 columns</p>\n",
+       "<p>7529200 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               LOW    HIGH    OPEN   CLOSE\n",
-       "TRADE_ENTRY_DATE Date_Time Date_Time ID                                   \n",
-       "2009-04-01       9         30        ATRL    82.00   83.50   82.00   82.90\n",
-       "                                     BAHL    26.14   27.30   26.92   26.50\n",
-       "                                     EPCL    22.40   23.25   22.40   22.75\n",
-       "                                     FCCL     6.41    6.74    6.49    6.70\n",
-       "                                     LUCK    50.11   51.85   50.79   51.35\n",
-       "...                                            ...     ...     ...     ...\n",
-       "2019-04-15       16        7         OGDC   145.80  145.80  145.80  145.80\n",
-       "                                     PPL    176.50  176.50  176.50  176.50\n",
-       "                                     PSO    214.44  214.44  214.44  214.44\n",
-       "                                     SEARL  210.00  210.00  210.00  210.00\n",
-       "                                     TRG     21.90   21.90   21.90   21.90\n",
+       "        TRADE_ENTRY_DATE  DATE_Time  DATE_TIME.1     ID    OPEN    HIGH  \\\n",
+       "0             2009-04-01        NaN          NaN   ATRL   82.00   83.50   \n",
+       "1             2009-04-01        NaN          NaN   BAHL   26.92   27.30   \n",
+       "2             2009-04-01        NaN          NaN   EPCL   22.40   23.25   \n",
+       "3             2009-04-01        NaN          NaN   FCCL    6.49    6.74   \n",
+       "4             2009-04-01        NaN          NaN   LUCK   50.79   51.85   \n",
+       "...                  ...        ...          ...    ...     ...     ...   \n",
+       "7529195       2019-04-15        NaN          NaN   OGDC  145.80  145.80   \n",
+       "7529196       2019-04-15        NaN          NaN    PPL  176.50  176.50   \n",
+       "7529197       2019-04-15        NaN          NaN    PSO  214.44  214.44   \n",
+       "7529198       2019-04-15        NaN          NaN  SEARL  210.00  210.00   \n",
+       "7529199       2019-04-15        NaN          NaN    TRG   21.90   21.90   \n",
        "\n",
-       "[7529200 rows x 4 columns]"
+       "            LOW   CLOSE  \n",
+       "0         82.00   82.90  \n",
+       "1         26.14   26.50  \n",
+       "2         22.40   22.75  \n",
+       "3          6.41    6.70  \n",
+       "4         50.11   51.35  \n",
+       "...         ...     ...  \n",
+       "7529195  145.80  145.80  \n",
+       "7529196  176.50  176.50  \n",
+       "7529197  214.44  214.44  \n",
+       "7529198  210.00  210.00  \n",
+       "7529199   21.90   21.90  \n",
+       "\n",
+       "[7529200 rows x 8 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2.to_csv('File.csv')\n",
-    "df2"
+    "columns_titles = ['TRADE_ENTRY_DATE','DATE_Time','DATE_TIME.1','ID','OPEN','HIGH','LOW','CLOSE']\n",
+    "df=df.reindex(columns=columns_titles)"
    ]
   }
  ],
