--- a/Project_file.ipynb
+++ b/Project_file.ipynb
@@ -24,7 +24,8 @@
     "* [Per Trade Data]()\n",
     "    * [Loading Data](#pt)\n",
     "    * [Combining Date Time](#dt)\n",
-    "    * [Cleaning Data](#Clean)"
+    "    * [Cleaning Data](#Clean)\n",
+    "    * [Data Cube](#DataCube)"
    ]
   },
   {
@@ -359,6 +360,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic Trading"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -379,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Refactored Code"
+    "## For Stock 1"
    ]
   },
   {
@@ -428,6 +436,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For Stock 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -473,6 +488,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For Stock 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -515,6 +537,13 @@
     "        Brocker_fee+=temp3\n",
     "        Trade_Occurred=True\n",
     "    return X,nS1,nS2,nS3,Trade_Occurred,Share1,Share2,Share3,Brocker_fee"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Making Trades"
    ]
   },
   {
@@ -625,7 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating Data Frame to Record Files into Excel Sheet"
+    "## Creating Data Frame to Trade log into Excel Sheet"
    ]
   },
   {
@@ -1041,7 +1070,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DataCubes"
+    "# DataCubes  <a name='DataCube'></a>"
    ]
   },
   {
@@ -1135,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1267,7 @@
        "4       2009-04-01          9           30  LUCK  50.11  51.85  50.79  51.35"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,206 +1279,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>TRADE_ENTRY_DATE</th>\n",
-       "      <th>DATE_Time</th>\n",
-       "      <th>DATE_TIME.1</th>\n",
-       "      <th>ID</th>\n",
-       "      <th>OPEN</th>\n",
-       "      <th>HIGH</th>\n",
-       "      <th>LOW</th>\n",
-       "      <th>CLOSE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2009-04-01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ATRL</td>\n",
-       "      <td>82.00</td>\n",
-       "      <td>83.50</td>\n",
-       "      <td>82.00</td>\n",
-       "      <td>82.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2009-04-01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>BAHL</td>\n",
-       "      <td>26.92</td>\n",
-       "      <td>27.30</td>\n",
-       "      <td>26.14</td>\n",
-       "      <td>26.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2009-04-01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>EPCL</td>\n",
-       "      <td>22.40</td>\n",
-       "      <td>23.25</td>\n",
-       "      <td>22.40</td>\n",
-       "      <td>22.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2009-04-01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>FCCL</td>\n",
-       "      <td>6.49</td>\n",
-       "      <td>6.74</td>\n",
-       "      <td>6.41</td>\n",
-       "      <td>6.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2009-04-01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>LUCK</td>\n",
-       "      <td>50.79</td>\n",
-       "      <td>51.85</td>\n",
-       "      <td>50.11</td>\n",
-       "      <td>51.35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7529195</th>\n",
-       "      <td>2019-04-15</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>OGDC</td>\n",
-       "      <td>145.80</td>\n",
-       "      <td>145.80</td>\n",
-       "      <td>145.80</td>\n",
-       "      <td>145.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7529196</th>\n",
-       "      <td>2019-04-15</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PPL</td>\n",
-       "      <td>176.50</td>\n",
-       "      <td>176.50</td>\n",
-       "      <td>176.50</td>\n",
-       "      <td>176.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7529197</th>\n",
-       "      <td>2019-04-15</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PSO</td>\n",
-       "      <td>214.44</td>\n",
-       "      <td>214.44</td>\n",
-       "      <td>214.44</td>\n",
-       "      <td>214.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7529198</th>\n",
-       "      <td>2019-04-15</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>SEARL</td>\n",
-       "      <td>210.00</td>\n",
-       "      <td>210.00</td>\n",
-       "      <td>210.00</td>\n",
-       "      <td>210.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7529199</th>\n",
-       "      <td>2019-04-15</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>TRG</td>\n",
-       "      <td>21.90</td>\n",
-       "      <td>21.90</td>\n",
-       "      <td>21.90</td>\n",
-       "      <td>21.90</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7529200 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        TRADE_ENTRY_DATE  DATE_Time  DATE_TIME.1     ID    OPEN    HIGH  \\\n",
-       "0             2009-04-01        NaN          NaN   ATRL   82.00   83.50   \n",
-       "1             2009-04-01        NaN          NaN   BAHL   26.92   27.30   \n",
-       "2             2009-04-01        NaN          NaN   EPCL   22.40   23.25   \n",
-       "3             2009-04-01        NaN          NaN   FCCL    6.49    6.74   \n",
-       "4             2009-04-01        NaN          NaN   LUCK   50.79   51.85   \n",
-       "...                  ...        ...          ...    ...     ...     ...   \n",
-       "7529195       2019-04-15        NaN          NaN   OGDC  145.80  145.80   \n",
-       "7529196       2019-04-15        NaN          NaN    PPL  176.50  176.50   \n",
-       "7529197       2019-04-15        NaN          NaN    PSO  214.44  214.44   \n",
-       "7529198       2019-04-15        NaN          NaN  SEARL  210.00  210.00   \n",
-       "7529199       2019-04-15        NaN          NaN    TRG   21.90   21.90   \n",
-       "\n",
-       "            LOW   CLOSE  \n",
-       "0         82.00   82.90  \n",
-       "1         26.14   26.50  \n",
-       "2         22.40   22.75  \n",
-       "3          6.41    6.70  \n",
-       "4         50.11   51.35  \n",
-       "...         ...     ...  \n",
-       "7529195  145.80  145.80  \n",
-       "7529196  176.50  176.50  \n",
-       "7529197  214.44  214.44  \n",
-       "7529198  210.00  210.00  \n",
-       "7529199   21.90   21.90  \n",
-       "\n",
-       "[7529200 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "columns_titles = ['TRADE_ENTRY_DATE','DATE_Time','DATE_TIME.1','ID','OPEN','HIGH','LOW','CLOSE']\n",
     "df=df.reindex(columns=columns_titles)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1486,7 +1329,7 @@
     "width": "165px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
