feat : Implemented Markowitz Model will add frontier visualization later on

--- a/Project_file.ipynb
+++ b/Project_file.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1368,7 +1368,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1568,6 +1570,120 @@
    "outputs": [],
    "source": [
     "df.to_csv('../MPT Data/Combined.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_stocks=pd.read_csv('../MPT Data/Combined.csv')\n",
+    "df.drop('TRADE_ENTRY_DATE',axis=1,inplace=True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Type Conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "for _,columns in enumerate(df):\n",
+    "    df[[columns]]=df[[columns]].astype('float')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Markowitz Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will move ahead with the calculations for the optimization of the portfolio. Start with capturing the expected return and the variance of the portfolio chosen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1=df[:20]\n",
+    "#Annualized Return\n",
+    "mu = expected_returns.mean_historical_return(df1)\n",
+    "#Sample Variance of Portfolio\n",
+    "Sigma = risk_models.exp_cov(df1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Proceed by computing and storing the values for a portfolio weight with maximum Sharpe ratio and minimum volatility respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('ATRL_CLOSE', 0.14556), ('bahl_TRADE_RATE', 0.03833), ('EPCL_TRADE_RATE', 0.13293), ('FCCL_TRADE_RATE', 0.04853), ('LUCK_TRADE_RATE', 0.41982), ('MCB_TRADE_RATE', -0.69535), ('MLCF_TRADE_RATE', 0.10114), ('NETSOL_TRADE_RATE', 0.1147), ('NML_TRADE_RATE', 0.14811), ('OGDC_TRADE_RATE', 0.50963), ('PPL_TRADE_RATE', 0.04772), ('PSO_TRADE_RATE', -0.01555), ('SEARL_TRADE_RATE', -0.0359), ('TRG_TRADE_RATE', 0.04033)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Max Sharpe Ratio - Tangent to the EF\n",
+    "ef = EfficientFrontier(mu, Sigma,weight_bounds=(-1,1)) #weight bounds in negative allows shorting of stocks\n",
+    "sharpe_pfolio=ef.max_sharpe() #May use add objective to ensure minimum zero weighting to individual stocks\n",
+    "sharpe_pwt=ef.clean_weights()\n",
+    "print(sharpe_pwt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will provide you the weight of different holdings. In case you want to minimize ‘zero’ holding or weight feel free to use L2 regression. Additionally, the weight_bounds have been set from -1 to 1 for allowing computation of ‘shorting’ stocks. The same exercise will be undertaken for the minimum variance portfolio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting the Efficient Frontier and Optimizing Portfolio Allocation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The final step is the plot the efficient frontier for visual purposes, and calculate the asset allocation (i.e. no of shares to purchase or short) for a given dollar amount of a portfolio. For the purpose of this exercise, I have considered $10,000 — the default starting value on investopedia.\n",
+    "Image for post"
    ]
   }
  ],
