--- a/Project_file.ipynb
+++ b/Project_file.ipynb
@@ -61,6 +61,8 @@
     "from scipy import stats\n",
     "import matplotlib as mpl\n",
     "from pypfopt.cla import CLA\n",
+    "from pypfopt.cla import CLA\n",
+    "from pypfopt import discrete_allocation\n",
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
     "from pypfopt import risk_models\n",
@@ -1665,6 +1667,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected annual return: 96.7%\n",
+      "Annual volatility: 1.7%\n",
+      "Sharpe Ratio: 39.97\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.9672852800999363, 0.017445754261531027, 39.96876659196637)"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ef.portfolio_performance(verbose=True, risk_free_rate = 0.27)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1685,6 +1716,61 @@
     "The final step is the plot the efficient frontier for visual purposes, and calculate the asset allocation (i.e. no of shares to purchase or short) for a given dollar amount of a portfolio. For the purpose of this exercise, I have considered $10,000 — the default starting value on investopedia.\n",
     "Image for post"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'discrete_allocation' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-96-f4ebb4b76f53>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlatest_prices\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdiscrete_allocation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_latest_prices\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'discrete_allocation' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'discrete_allocation' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-97-381ff4461024>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Allocate Portfolio Value in $ as required to show number of shares/stocks to buy, also bounds for shorting will affect allocation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#Min Volatility Portfolio Allocation $10000\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m allocation_minv, rem_minv = discrete_allocation.DiscreteAllocation(minvol_pwt, latest_prices,\n\u001b[0m\u001b[0;32m      4\u001b[0m                                                                    total_portfolio_value=10000).lp_portfolio()\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'discrete_allocation' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Allocate Portfolio Value in $ as required to show number of shares/stocks to buy, also bounds for shorting will affect allocation\n",
+    "#Min Volatility Portfolio Allocation $10000\n",
+    "latest_prices = discrete_allocation.get_latest_prices(df1)\n",
+    "\n",
+    "allocation_minv, rem_minv = discrete_allocation.DiscreteAllocation(minvol_pwt, latest_prices,\n",
+    "                                                                   total_portfolio_value=10000).lp_portfolio()\n",
+    "\n",
+    "print(allocation_minv)\n",
+    "print(\"Leftover Fund value in$ after building minimum volatility portfolio is ${:.2f}\".format(rem_minv))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
