feat : Normalized the training and test data

--- a/Project_file.ipynb
+++ b/Project_file.ipynb
@@ -45,12 +45,13 @@
    "outputs": [],
    "source": [
     "!pip install plotly\n",
-    "!pip install PyPortfolioOpt"
+    "!pip install PyPortfolioOpt\n",
+    "!pip install tensorflow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1916,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1940,20 +1941,20 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ATRL_CLOSE</th>\n",
-       "      <th>bahl_TRADE_RATE</th>\n",
-       "      <th>EPCL_TRADE_RATE</th>\n",
-       "      <th>FCCL_TRADE_RATE</th>\n",
-       "      <th>LUCK_TRADE_RATE</th>\n",
-       "      <th>MCB_TRADE_RATE</th>\n",
-       "      <th>MLCF_TRADE_RATE</th>\n",
-       "      <th>NETSOL_TRADE_RATE</th>\n",
-       "      <th>NML_TRADE_RATE</th>\n",
-       "      <th>OGDC_TRADE_RATE</th>\n",
-       "      <th>PPL_TRADE_RATE</th>\n",
-       "      <th>PSO_TRADE_RATE</th>\n",
-       "      <th>SEARL_TRADE_RATE</th>\n",
-       "      <th>TRG_TRADE_RATE</th>\n",
+       "      <th>ATRL</th>\n",
+       "      <th>bahl</th>\n",
+       "      <th>EPCL</th>\n",
+       "      <th>FCCL</th>\n",
+       "      <th>LUCK</th>\n",
+       "      <th>MCB</th>\n",
+       "      <th>MLCF</th>\n",
+       "      <th>NETSOL</th>\n",
+       "      <th>NML</th>\n",
+       "      <th>OGDC</th>\n",
+       "      <th>PPL</th>\n",
+       "      <th>PSO</th>\n",
+       "      <th>SEARL</th>\n",
+       "      <th>TRG</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2047,36 +2048,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   ATRL_CLOSE  bahl_TRADE_RATE  EPCL_TRADE_RATE  FCCL_TRADE_RATE  \\\n",
-       "0       82.90            26.50            22.75             6.70   \n",
-       "1       83.30            26.58            23.00             6.70   \n",
-       "2       85.00            26.90            22.90             6.75   \n",
-       "3       85.40            27.02            23.19             6.70   \n",
-       "4       86.85            28.10            23.11             6.74   \n",
+       "    ATRL   bahl   EPCL  FCCL   LUCK     MCB  MLCF  NETSOL    NML   OGDC  \\\n",
+       "0  82.90  26.50  22.75  6.70  51.35  144.00  5.00   17.40  31.01  73.85   \n",
+       "1  83.30  26.58  23.00  6.70  51.25  144.17  4.98   17.45  31.30  74.00   \n",
+       "2  85.00  26.90  22.90  6.75  51.50  144.49  5.05   17.40  31.20  73.70   \n",
+       "3  85.40  27.02  23.19  6.70  51.85  145.00  5.08   17.50  31.05  73.80   \n",
+       "4  86.85  28.10  23.11  6.74  51.85  145.00  5.17   17.26  30.80  73.70   \n",
        "\n",
-       "   LUCK_TRADE_RATE  MCB_TRADE_RATE  MLCF_TRADE_RATE  NETSOL_TRADE_RATE  \\\n",
-       "0            51.35          144.00             5.00              17.40   \n",
-       "1            51.25          144.17             4.98              17.45   \n",
-       "2            51.50          144.49             5.05              17.40   \n",
-       "3            51.85          145.00             5.08              17.50   \n",
-       "4            51.85          145.00             5.17              17.26   \n",
-       "\n",
-       "   NML_TRADE_RATE  OGDC_TRADE_RATE  PPL_TRADE_RATE  PSO_TRADE_RATE  \\\n",
-       "0           31.01            73.85          176.75          200.80   \n",
-       "1           31.30            74.00          177.00          200.99   \n",
-       "2           31.20            73.70          177.30          201.03   \n",
-       "3           31.05            73.80          177.33          201.12   \n",
-       "4           30.80            73.70          176.80          201.45   \n",
-       "\n",
-       "   SEARL_TRADE_RATE  TRG_TRADE_RATE  \n",
-       "0             64.05            1.37  \n",
-       "1             64.00            1.40  \n",
-       "2             63.10            1.38  \n",
-       "3             60.80            1.31  \n",
-       "4             62.00            1.40  "
+       "      PPL     PSO  SEARL   TRG  \n",
+       "0  176.75  200.80  64.05  1.37  \n",
+       "1  177.00  200.99  64.00  1.40  \n",
+       "2  177.30  201.03  63.10  1.38  \n",
+       "3  177.33  201.12  60.80  1.31  \n",
+       "4  176.80  201.45  62.00  1.40  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2084,28 +2071,11 @@
    "source": [
     "df=pd.read_csv('../MPT Data/Combined.csv')\n",
     "df.drop(['TRADE_ENTRY_DATE','Unnamed: 0'],axis=1,inplace=True)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Type Conversion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
     "for _,columns in enumerate(df):\n",
     "    df[[columns]]=df[[columns]].astype('float')\n",
     "df.columns=['ATRL','bahl','EPCL','FCCL','LUCK','MCB','MLCF','NETSOL','NML',\n",
-    "      'OGDC','PPL','PSO','SEARL','TRG']\n"
+    "      'OGDC','PPL','PSO','SEARL','TRG']\n",
+    "df.head()"
    ]
   },
   {
@@ -2434,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2465,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19522,6 +19492,176 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Loading Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ATRL</th>\n",
+       "      <th>bahl</th>\n",
+       "      <th>EPCL</th>\n",
+       "      <th>FCCL</th>\n",
+       "      <th>LUCK</th>\n",
+       "      <th>MCB</th>\n",
+       "      <th>MLCF</th>\n",
+       "      <th>NETSOL</th>\n",
+       "      <th>NML</th>\n",
+       "      <th>OGDC</th>\n",
+       "      <th>PPL</th>\n",
+       "      <th>PSO</th>\n",
+       "      <th>SEARL</th>\n",
+       "      <th>TRG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>82.90</td>\n",
+       "      <td>26.50</td>\n",
+       "      <td>22.75</td>\n",
+       "      <td>6.70</td>\n",
+       "      <td>51.35</td>\n",
+       "      <td>144.00</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>17.40</td>\n",
+       "      <td>31.01</td>\n",
+       "      <td>73.85</td>\n",
+       "      <td>176.75</td>\n",
+       "      <td>200.80</td>\n",
+       "      <td>64.05</td>\n",
+       "      <td>1.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>83.30</td>\n",
+       "      <td>26.58</td>\n",
+       "      <td>23.00</td>\n",
+       "      <td>6.70</td>\n",
+       "      <td>51.25</td>\n",
+       "      <td>144.17</td>\n",
+       "      <td>4.98</td>\n",
+       "      <td>17.45</td>\n",
+       "      <td>31.30</td>\n",
+       "      <td>74.00</td>\n",
+       "      <td>177.00</td>\n",
+       "      <td>200.99</td>\n",
+       "      <td>64.00</td>\n",
+       "      <td>1.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>85.00</td>\n",
+       "      <td>26.90</td>\n",
+       "      <td>22.90</td>\n",
+       "      <td>6.75</td>\n",
+       "      <td>51.50</td>\n",
+       "      <td>144.49</td>\n",
+       "      <td>5.05</td>\n",
+       "      <td>17.40</td>\n",
+       "      <td>31.20</td>\n",
+       "      <td>73.70</td>\n",
+       "      <td>177.30</td>\n",
+       "      <td>201.03</td>\n",
+       "      <td>63.10</td>\n",
+       "      <td>1.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>85.40</td>\n",
+       "      <td>27.02</td>\n",
+       "      <td>23.19</td>\n",
+       "      <td>6.70</td>\n",
+       "      <td>51.85</td>\n",
+       "      <td>145.00</td>\n",
+       "      <td>5.08</td>\n",
+       "      <td>17.50</td>\n",
+       "      <td>31.05</td>\n",
+       "      <td>73.80</td>\n",
+       "      <td>177.33</td>\n",
+       "      <td>201.12</td>\n",
+       "      <td>60.80</td>\n",
+       "      <td>1.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>86.85</td>\n",
+       "      <td>28.10</td>\n",
+       "      <td>23.11</td>\n",
+       "      <td>6.74</td>\n",
+       "      <td>51.85</td>\n",
+       "      <td>145.00</td>\n",
+       "      <td>5.17</td>\n",
+       "      <td>17.26</td>\n",
+       "      <td>30.80</td>\n",
+       "      <td>73.70</td>\n",
+       "      <td>176.80</td>\n",
+       "      <td>201.45</td>\n",
+       "      <td>62.00</td>\n",
+       "      <td>1.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ATRL   bahl   EPCL  FCCL   LUCK     MCB  MLCF  NETSOL    NML   OGDC  \\\n",
+       "0  82.90  26.50  22.75  6.70  51.35  144.00  5.00   17.40  31.01  73.85   \n",
+       "1  83.30  26.58  23.00  6.70  51.25  144.17  4.98   17.45  31.30  74.00   \n",
+       "2  85.00  26.90  22.90  6.75  51.50  144.49  5.05   17.40  31.20  73.70   \n",
+       "3  85.40  27.02  23.19  6.70  51.85  145.00  5.08   17.50  31.05  73.80   \n",
+       "4  86.85  28.10  23.11  6.74  51.85  145.00  5.17   17.26  30.80  73.70   \n",
+       "\n",
+       "      PPL     PSO  SEARL   TRG  \n",
+       "0  176.75  200.80  64.05  1.37  \n",
+       "1  177.00  200.99  64.00  1.40  \n",
+       "2  177.30  201.03  63.10  1.38  \n",
+       "3  177.33  201.12  60.80  1.31  \n",
+       "4  176.80  201.45  62.00  1.40  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=pd.read_csv('../MPT Data/Combined.csv')\n",
+    "df.drop(['TRADE_ENTRY_DATE','Unnamed: 0'],axis=1,inplace=True)\n",
+    "for _,columns in enumerate(df):\n",
+    "    df[[columns]]=df[[columns]].astype('float')\n",
+    "df.columns=['ATRL','bahl','EPCL','FCCL','LUCK','MCB','MLCF','NETSOL','NML',\n",
+    "      'OGDC','PPL','PSO','SEARL','TRG']\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Preprocessing"
    ]
   },
@@ -19534,38 +19674,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0         26.50\n",
-       "1         26.58\n",
-       "2         26.90\n",
-       "3         27.02\n",
-       "4         28.10\n",
-       "          ...  \n",
-       "399996    84.50\n",
-       "399997    84.50\n",
-       "399998    84.50\n",
-       "399999    84.50\n",
-       "400000    84.50\n",
-       "Name: bahl, Length: 400001, dtype: float64"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data=[]\n",
     "test_data=[]\n",
     "for share in shares1:\n",
-    "    train_data.append(df.loc[:400000,share])\n",
-    "    test_data.append(df.loc[400000:,share])\n",
-    "train_data[1]"
+    "    train_data.append(df.loc[:299999,share])\n",
+    "    test_data.append(df.loc[300000:400000,share])\n"
    ]
   },
   {
@@ -19578,7 +19695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19597,31 +19714,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train the Scaler with training data and smooth data\n",
+    "smoothing_window_size = 200\n",
+    "for i in range(len(shares1)):\n",
+    "    train_data_acq=train_data[i]\n",
+    "    for di in range(0,300000,smoothing_window_size):\n",
+    "        scaler.fit(train_data_acq[di:di+smoothing_window_size,:])\n",
+    "        train_data_acq[di:di+smoothing_window_size,:] = scaler.transform(train_data_acq[di:di+smoothing_window_size,:])\n",
+    "    train_data[i]=train_data_acq\n",
+    "    test_data[i]=scaler.fit(test_data[i]).transform(test_data[i]).reshape(-1)\n",
+    "# You normalize the last bit of remaining data\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reshape the data back to the shape of [data_size]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'reshape'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-ef29338fe2fb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0msmoothing_window_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m25000\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mdi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m400000\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msmoothing_window_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mscaler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0msmoothing_window_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mtrain_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0msmoothing_window_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscaler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mdi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0msmoothing_window_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-53-df5d9327edbb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Reshape both train and test data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtrain_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'reshape'"
      ]
     }
    ],
    "source": [
-    "# Train the Scaler with training data and smooth data\n",
-    "smoothing_window_size = 25000\n",
-    "for di in range(0,400000,smoothing_window_size):\n",
-    "    scaler.fit(train_data[di:di+smoothing_window_size,:])\n",
-    "    train_data[di:di+smoothing_window_size,:] = scaler.transform(train_data[di:di+smoothing_window_size,:])\n",
-    "\n",
-    "# You normalize the last bit of remaining data\n",
-    "scaler.fit(train_data[di+smoothing_window_size:,:])\n",
-    "train_data[di+smoothing_window_size:,:] = scaler.transform(train_data[di+smoothing_window_size:,:])"
+    "# Reshape both train and test data\n",
+    "train_data = train_data.reshape(-1)\n"
    ]
   },
   {
