feat : Train the LSTM

--- a/Project_file.ipynb
+++ b/Project_file.ipynb
@@ -20098,6 +20098,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to build the LSTM, we need to import a couple of modules from Keras:\n",
+    "\n",
+    "    Sequential for initializing the neural network\n",
+    "    Dense for adding a densely connected neural network layer\n",
+    "    LSTM for adding the Long Short-Term Memory layer\n",
+    "    Dropout for adding dropout layers that prevent overfitting "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We add the LSTM layer and later add a few Dropout layers to prevent overfitting. We add the LSTM layer with the following arguments:\n",
+    "\n",
+    "    50 units which is the dimensionality of the output space\n",
+    "    return_sequences=True which determines whether to return the last output in the output sequence, or the full sequence\n",
+    "    input_shape as the shape of our training set. \n",
+    "\n",
+    "When defining the Dropout layers, we specify 0.2, meaning that 20% of the layers will be dropped. Thereafter, we add the Dense layer that specifies the output of 1 unit. After this, we compile our model using the popular adam optimizer and set the loss as the mean_squarred_error. This will compute the mean of the squared errors. Next, we fit the model to run on 100 epochs with a batch size of 32. Keep in mind that, depending on the specs of your computer, this might take a few minutes to finish running."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 102,
    "metadata": {},
