feat : Added model training in the pipeline

--- a/Project_file.ipynb
+++ b/Project_file.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,6 +112,30 @@
     "from matplotlib.ticker import FuncFormatter\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from pypfopt.efficient_frontier import EfficientFrontier "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[name: \"/device:CPU:0\"\n",
+      "device_type: \"CPU\"\n",
+      "memory_limit: 268435456\n",
+      "locality {\n",
+      "}\n",
+      "incarnation: 536682426730743768\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.python.client import device_lib\n",
+    "print(device_lib.list_local_devices())"
    ]
   },
   {
