feat : added all the model weights

--- a/Assaignment£3.ipynb
+++ b/Assaignment£3.ipynb
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 17,
    "metadata": {
     "id": "zsvQ2eZ94vlS"
    },
@@ -661,6 +661,8 @@
     "MAPE={'ATRL': 0,'bahl': 0,'EPCL': 0,'FCCL': 0,'LUCK': 0,'MCB': 0,\n",
     " 'MLCF': 0,'NETSOL': 0,'NML': 0,'OGDC': 0,'PPL': 0,'PSO': 0,\n",
     " 'SEARL': 0,'TRG': 0}\n",
+    "MAP=['ATRL','bahl','EPCL','FCCL','LUCK','MCB','MLCF','NETSOL','NML','OGDX',\n",
+    "       'PPL','PSO','SEARL','TRG']\n",
     "for share in shares1:\n",
     "    models.append(model()) "
    ]
@@ -3507,12 +3509,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'MAP' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-ea8db88d5c7e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m14\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m   \u001b[0mmodels\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Models/'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mMAP\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'_model'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'MAP' is not defined"
+     ]
+    }
+   ],
    "source": [
     "for i in range(14):\n",
-    "  models[i].save(MAP[i]+'_model')"
+    "  models[i]=keras.models.load_model('Models/'+MAP[i]+'_model')"
    ]
   },
   {
@@ -3529,7 +3543,7 @@
    "outputs": [],
    "source": [
     "for i in range(14):\n",
-    "  models[i].load(MAP[i]+'_model')"
+    "  models[i].load('Model'+MAP[i]+'_model')"
    ]
   },
   {
